--- a/server/package.json
+++ b/server/package.json
@@ -27,19 +27,20 @@
         "keyv-file": "^0.2.0",
         "lodash": "^4.17.21",
         "log4js": "^6.7.1",
+        "mqtt": "^4.3.7",
         "multicast-dns": "^7.2.5",
         "ping": "^0.4.4",
         "uuid": "^9.0.0",
         "winston": "^3.8.2"
     },
     "devDependencies": {
-        "@types/ping": "^0.4.1",
-        "@types/lodash": "^4.14.189",
         "@types/crypto-js": "^4.1.1",
         "@types/eventsource": "^1.1.11",
         "@types/express": "^4.17.14",
+        "@types/lodash": "^4.14.189",
         "@types/multicast-dns": "^7.2.1",
         "@types/node": "^18.11.9",
+        "@types/ping": "^0.4.1",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.57.1",
         "@typescript-eslint/parser": "^5.57.1",
