--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "ant-design-vue": "^3.2.20",
+        "axios": "^1.4.0",
         "crypto-js": "^4.1.1",
         "events": "^3.3.0",
         "lodash": "^4.17.21",
