--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -16,6 +16,9 @@
     "references": [
         {
             "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.app.json"
         }
     ]
 }
